--- a/contact.html
+++ b/contact.html
@@ -185,6 +185,10 @@
         </form>
     </div>
 
+    <footer id="footer-container"></footer>
+
+    <script src="/footer.js"></script>
+
     <script src="foodDays.js"></script> <!-- Länk till matdags-JavaScript -->
 
     <!-- <img src="images/divider/scribble1.svg" alt="Dekorativ divider" class="image-divider"> -->
