--- a/generator.html
+++ b/generator.html
@@ -11,10 +11,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
+  
 
-    <link rel="stylesheet" href="main.css">
+    
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="main.css">
     
     <link rel="icon" type="image/png" href="images/sidfliklogo.png">
 </head>
@@ -247,6 +248,10 @@
     <!--<div class="footer-banner">
         <button id="searchBtn">Sök</button>
     </div> -->
+
+    <footer id="footer-container"></footer>
+
+    <script src="/footer.js"></script>
     <script src="generator.js"></script>
 
     <script src="loadNavbar.js"></script>
