--- a/startsida2.html
+++ b/startsida2.html
@@ -15,11 +15,12 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="main.css">
+    
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="foodDays.css">
     <link rel="stylesheet" href="startsida-image-links.css">
+    <link rel="stylesheet" href="main.css">
 
 
     <link rel="icon" type="image/png" href="images/sidfliklogo.png">
@@ -91,6 +92,10 @@
         <img src="" alt=""> <!-- Bilden fylls också dynamiskt -->
         <p></p> <!-- Beskrivningen fylls också dynamiskt -->
     </div>
+
+    <footer id="footer-container"></footer>
+
+    <script src="/footer.js"></script>
 
     <script src="loadNavbar.js"></script>
 
