test för att försöka lösa förra push misslyckandet som resulterade i ett stort meddelande på skärmen finns ingen github site

--- a/artiklar/inredning/inredning-mainpage.html
+++ b/artiklar/inredning/inredning-mainpage.html
@@ -49,8 +49,8 @@
 
     <footer id="footer-container"></footer>
 
-    <script src="/footer.js"></script>
-    <script src="/loadNavbar.js"></script>
+    <script src="footer.js"></script>
+    <script src="loadNavbar.js"></script>
 
     
 
