--- a/generator.html
+++ b/generator.html
@@ -251,7 +251,7 @@
 
     <footer id="footer-container"></footer>
 
-    <script src="/footer.js"></script>
+    <script src="footer.js"></script>
     <script src="generator.js"></script>
 
     <script src="loadNavbar.js"></script>
