--- a/artiklar/Koksredskap/koksredskap-mainpage.html
+++ b/artiklar/Koksredskap/koksredskap-mainpage.html
@@ -77,9 +77,9 @@
     <!-- ... -->
     <footer id="footer-container"></footer>
 
-    <script src="/footer.js"></script>
+    <script src="footer.js"></script>
 
-    <script src="/loadNavbar.js"></script>
+    <script src="loadNavbar.js"></script>
 </body>
 
 </html>
