--- a/startsida2.html
+++ b/startsida2.html
@@ -95,7 +95,7 @@
 
     <footer id="footer-container"></footer>
 
-    <script src="/footer.js"></script>
+    <script src="footer.js"></script>
 
     <script src="loadNavbar.js"></script>
 
