--- a/navbar.html
+++ b/navbar.html
@@ -36,14 +36,14 @@
             <label class="nav__submenu-trigger-finger" for="submenu-trigger-articles"></label> <!-- Uppdaterat för-attribut -->
             <ul class="nav__list-child">
                 <li class="nav__item">
-                    <a href="artiklar/halsa/halsa.html" class="nav__link">
+                    <a href="artiklar/halsa.html" class="nav__link">
                         <span class="nav__text">
                             Hälsa
                         </span>
                     </a>
                 </li>
                 <li class="nav__item">
-                    <a href="artiklar/Koksredskap/koksredskap-mainpage.html" class="nav__link">
+                    <a href="artiklar/koksredskap-mainpage.html" class="nav__link">
                         <span class="nav__text">
                             Köksredskap
                         </span>
