--- a/startsida2.html
+++ b/startsida2.html
@@ -32,7 +32,7 @@
 
     <header class="site-header">
         <a href="startsida2.html" class="logo-link">
-            <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
+            <img src="images/logos/cleanlogowithframe.svg" alt="Logga" />
         </a>
 
 
@@ -45,9 +45,7 @@
 
     </header>
 
-    <a href="startsida2.html" class="logo-link">
-        <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
-    </a>
+   
 
 
 
