--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <header class="site-header">
         <a href="startsida2.html" class="logo-link">
-            <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
+            <img src="images/logos/cleanlogowithframe.svg" alt="Logga" />
         </a>
 
         <div id="navbar-container"></div>
@@ -45,9 +45,9 @@
 
     </header>
 
-    <a href="startsida2.html" class="logo-link">
+   <!-- <a href="startsida2.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
-    </a>
+    </a> -->
 
 
 
