--- a/startsida2.html
+++ b/startsida2.html
@@ -51,7 +51,7 @@
 
     <div class="background-container"></div>
 
-    
+    <div class="top-space"></div>
 
     <video id="randomVideo" autoplay loop muted playsinline preload="auto">
         Din webbläsare stöder inte videouppspelning.
