--- a/navbar.html
+++ b/navbar.html
@@ -25,6 +25,13 @@
                 </span>
             </a>
         </li>
+        <li class="nav__item">
+            <a href="matkreator.html" class="nav__link">
+                <span class="nav__text">
+                    Matkreatörer
+                </span>
+            </a>
+        </li>
 
         <li class="nav__item">
             <a href="#hoi" class="nav__link">
