--- a/matkreator.html
+++ b/matkreator.html
@@ -90,7 +90,7 @@
 
         <!-- Sökfält och knappar -->
         <div class="input-button-container">
-            <input type="text" id="searchInput" placeholder="Skriv 1 ingrediens och tryck Enter/Gå...">
+            <input type="text" id="searchInput" placeholder="Skriv matkreatörens namn och tryck enter...">
             <button onclick="addTagFromButton()" class="add-button">
                 <img src="images/knifeforksign.jpg
                 " alt="Add" />
