--- a/startsida2.html
+++ b/startsida2.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="main.css">
 
 
-    <link rel="icon" type="image/png" href="images/sidfliklogo.png">
+    <link rel="icon" type="image/png" href="images/logos/cleanlogowithframe.svg">
 </head>
 
 <body>
