--- a/navbar.html
+++ b/navbar.html
@@ -124,3 +124,12 @@
         </li>
     </ul>
 </nav>
+
+<head>
+    <style>
+        .nav__text {
+            font-size: 25px;
+            /* Ändra textstorlek på alla menyval */
+        }
+    </style>
+</head>
