--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@
     <div id="pagination-controls"></div>
 
 
-  
+    <div id="no-results-message" style="display: none; text-align: center;">
+        <img src="images/no-results.gif" alt="Inga resultat hittades" style="max-width: 100%; height: auto;">
+        <p>Saken du sökte på fanns inte, testa igen.</p>
+    </div>
+    
 
     <script src="script-ingrediensassistenten.js"></script>
 
