--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
 
 
     <div id="no-results-message" style="display: none; text-align: center;">
-        <img src="images/no-results.gif" alt="Inga resultat hittades" style="max-width: 100%; height: auto;">
+        <img src="images/handmjöl.png" alt="Inga resultat hittades" style="max-width: 300px; height: auto;">
         <p>Saken du sökte på fanns inte, testa igen.</p>
     </div>
+    
     
 
     <script src="script-ingrediensassistenten.js"></script>
