--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <div id="no-results-message" style="display: none; text-align: center;">
         <img src="images/handmjöl.png" alt="Inga resultat hittades" style="max-width: 300px; height: auto;">
-        <p>Saken du sökte på fanns inte, testa igen.</p>
+        <p>Det du sökte på fanns inte, testa igen.</p>
     </div>
     
     
