--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 
     <div id="no-results-message" style="display: none; text-align: center;">
-        <img src="images/handmjöl.png" alt="Inga resultat hittades" style="max-width: 300px; height: auto;">
+        <img src="images/handmjol.png" alt="Inga resultat hittades" style="max-width: 300px; height: auto;">
         <p>Det du sökte på fanns inte, testa igen.</p>
     </div>
     
