grön färg på mattyp knappar

--- a/generator.html
+++ b/generator.html
@@ -61,16 +61,16 @@
     <!-- Filter Knappar -->
     <div class="filter-container" id="mealtype">
         <div class="image-button" data-category="mealtype" data-filter="lunchmiddag">
-            <img src="images/knappargenerator/knappar/lunchmiddag.png" alt="lunchmiddag" />
+            <img src="images/Kopia av Middag & Lunch/lunchmiddag.svg" alt="lunchmiddag" />
         </div>
         <div class="image-button" data-category="mealtype" data-filter="pasta">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Pasta" />
+            <img src="images/Kopia av Middag & Lunch/pasta.svg" alt="Pasta" />
         </div>
         <div class="image-button" data-category="mealtype" data-filter="forratter">
-            <img src="images/knappargenerator/knappar/forattertilltugg.png" alt="Förrätter och tilltugg" />
+            <img src="images/Kopia av Middag & Lunch/forattertilltugg.svg" alt="Förrätter och tilltugg" />
         </div>
         <div class="image-button" data-category="mealtype" data-filter="streetfood">
-            <img src="images/knappargenerator/knappar/streetfood.png" alt="Streetfood" />
+            <img src="images/Kopia av Middag & Lunch/sasdipproror.svg" alt="Streetfood" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
         <div class="image-button hidden" data-category="mealtype" data-filter="frukostbrunch">
