rödfärg på protein knappar

--- a/generator.html
+++ b/generator.html
@@ -115,16 +115,16 @@
     <!-- Filter Knappar -->
     <div class="filter-container" id="proteins">
         <div class="image-button" data-category="protein" data-filter="not">
-            <img src="images/knappargenerator/knappar/not.png" alt="Nöt" />
+            <img src="images/rodfargknappar/not.svg" alt="Nöt" />
         </div>
         <div class="image-button" data-category="protein" data-filter="fisk">
-            <img src="images/knappargenerator/knappar/fisk.png" alt="Fisk" />
+            <img src="images/rodfargknappar/fisk.svg" alt="Fisk" />
         </div>
         <div class="image-button" data-category="protein" data-filter="fagel">
-            <img src="images/knappargenerator/knappar/fagel.png" alt="Fågel" />
+            <img src="images/rodfargknappar/fagel.svg" alt="Fågel" />
         </div>
         <div class="image-button" data-category="protein" data-filter="flask">
-            <img src="images/knappargenerator/knappar/flask.png" alt="Fläsk" />
+            <img src="images/rodfargknappar/flask.svg" alt="Fläsk" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
         <div class="image-button hidden" data-category="protein" data-filter="vegetarisk">
