ny rubrik till matgenerator test

--- a/generator.html
+++ b/generator.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="category-header">
-        <img src="images/rubrik bilder/mattyp7.svg" alt="Typ av Mat" class="category-image" />
+        <img src="images/rubrik bilder/mattyp svart tejp.svg" alt="Typ av Mat" class="category-image" />
     </div>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
@@ -109,7 +109,7 @@
     </div>
 
     <div class="category-header">
-        <img src="images/rubrik bilder/protein7.svg" alt="Protein" class="category-image" />
+        <img src="images/rubrik bilder/protein svart tejp.svg" alt="Protein" class="category-image" />
     </div>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
