limegrön färg på proteinsorter och grå bakgrund på länder knappar

--- a/generator.html
+++ b/generator.html
@@ -115,16 +115,16 @@
     <!-- Filter Knappar -->
     <div class="filter-container" id="proteins">
         <div class="image-button" data-category="protein" data-filter="not">
-            <img src="images/rodfargknappar/not.svg" alt="Nöt" />
+            <img src="images/rubrik bilder/notgron.svg" alt="Nöt" />
         </div>
         <div class="image-button" data-category="protein" data-filter="fisk">
-            <img src="images/rodfargknappar/fisk.svg" alt="Fisk" />
+            <img src="images/rubrik bilder/fiskgron.svg" alt="Fisk" />
         </div>
         <div class="image-button" data-category="protein" data-filter="fagel">
-            <img src="images/rodfargknappar/fagel.svg" alt="Fågel" />
+            <img src="images/rubrik bilder/fagelgron.svg" alt="Fågel" />
         </div>
         <div class="image-button" data-category="protein" data-filter="flask">
-            <img src="images/rodfargknappar/flask.svg" alt="Fläsk" />
+            <img src="images/rubrik bilder/flaskgron.svg" alt="Fläsk" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
         <div class="image-button hidden" data-category="protein" data-filter="vegetarisk">
@@ -162,16 +162,16 @@
     <!-- Filter Knappar -->
     <div class="filter-container" id="countries">
         <div class="image-button" data-category="country" data-filter="italien">
-            <img src="images/knappargenerator/knappar/italien.png" alt="Italien" />
+            <img src="images/rubrik bilder/italiengra.svg" alt="Italien" />
         </div>
         <div class="image-button" data-category="country" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/sverige.png" alt="Sverige" />
+            <img src="images/rubrik bilder/sverigegra.svg" alt="Sverige" />
         </div>
         <div class="image-button" data-category="country" data-filter="japan">
-            <img src="images/knappargenerator/knappar/japan.png" alt="Japan" />
+            <img src="images/rubrik bilder/japangra.svg" alt="Japan" />
         </div>
         <div class="image-button" data-category="country" data-filter="indien">
-            <img src="images/knappargenerator/knappar/indien.png" alt="Indien" />
+            <img src="images/rubrik bilder/indiengra.svg" alt="Indien" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
         <div class="image-button hidden" data-category="country" data-filter="kina">
