--- a/generator.html
+++ b/generator.html
@@ -55,41 +55,41 @@
     </div>
 
     <div class="category-header">
-        <img src="images/rubrik bilder/mattyp svart tejp.svg" alt="Typ av Mat" class="category-image" />
+        <img src="images/rubrik bilder/vad.svg" alt="Vad" class="category-image" />
     </div>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
     <div class="filter-container" id="mealtype">
         <div class="image-button" data-category="mealtype" data-filter="lunchmiddag">
-            <img src="images/Kopia av Middag & Lunch/lunchmiddag.svg" alt="lunchmiddag" />
+            <img src="images/mageneratorikoner/lunchmiddag.svg" alt="lunchmiddag" />
         </div>
         <div class="image-button" data-category="mealtype" data-filter="pasta">
-            <img src="images/Kopia av Middag & Lunch/pasta.svg" alt="Pasta" />
+            <img src="images/mageneratorikoner/pasta.svg" alt="Pasta" />
         </div>
         <div class="image-button" data-category="mealtype" data-filter="forratter">
-            <img src="images/Kopia av Middag & Lunch/forattertilltugg.svg" alt="Förrätter och tilltugg" />
+            <img src="images/mageneratorikoner/forattertilltugg.svg" alt="Förrätter och tilltugg" />
         </div>
         <div class="image-button" data-category="mealtype" data-filter="streetfood">
-            <img src="images/Kopia av Middag & Lunch/sasdipproror.svg" alt="Streetfood" />
+            <img src="images/mageneratorikoner/streetfood.svg" alt="Streetfood" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
         <div class="image-button hidden" data-category="mealtype" data-filter="frukostbrunch">
-            <img src="images/knappargenerator/knappar/frukostbrunch.png" alt="Frukost Brunch" />
+            <img src="images/mageneratorikoner/frukostbrunch.svg" alt="Frukost Brunch" />
         </div>
         <div class="image-button hidden" data-category="mealtype" data-filter="barnvanligt">
-            <img src="images/knappargenerator/knappar/barnvanligt.png" alt="Barnvänligt" />
+            <img src="images/mageneratorikoner/barnvanligt.svg" alt="Barnvänligt" />
         </div>
         <div class="image-button hidden" data-category="mealtype" data-filter="soppa">
-            <img src="images/knappargenerator/knappar/soppa.png" alt="Soppa" />
+            <img src="images/mageneratorikoner/soppa.svg" alt="Soppa" />
         </div>
         <div class="image-button hidden" data-category="mealtype" data-filter="sallad">
-            <img src="images/knappargenerator/knappar/sallad.png" alt="Sallad" />
+            <img src="images/mageneratorikoner/sallad.svg" alt="Sallad" />
         </div>
         <div class="image-button hidden" data-category="mealtype" data-filter="sasdipproror">
-            <img src="images/knappargenerator/knappar/sasdipproror.png" alt="Sås, dipp och röror" />
+            <img src="images/mageneratorikoner/sasdipproror.svg" alt="Sås, dipp och röror" />
         </div>
         <div class="image-button hidden" data-category="mealtype" data-filter="fika">
-            <img src="images/knappargenerator/knappar/efterattfika.png" alt="Efterrätt och fika" />
+            <img src="images/mageneratorikoner/efterattfika.svg" alt="Efterrätt och fika" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
@@ -109,38 +109,38 @@
     </div>
 
     <div class="category-header">
-        <img src="images/rubrik bilder/protein svart tejp.svg" alt="Protein" class="category-image" />
+        <img src="images/rubrik bilder/med.svg" alt="Protein" class="category-image" />
     </div>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
     <div class="filter-container" id="proteins">
         <div class="image-button" data-category="protein" data-filter="not">
-            <img src="images/rubrik bilder/notgron.svg" alt="Nöt" />
+            <img src="images/mageneratorikoner/not.svg" alt="Nöt" />
         </div>
         <div class="image-button" data-category="protein" data-filter="fisk">
-            <img src="images/rubrik bilder/fiskgron.svg" alt="Fisk" />
+            <img src="images/mageneratorikoner/fisk.svg" alt="Fisk" />
         </div>
         <div class="image-button" data-category="protein" data-filter="fagel">
-            <img src="images/rubrik bilder/fagelgron.svg" alt="Fågel" />
+            <img src="images/mageneratorikoner/fagel.svg" alt="Fågel" />
         </div>
         <div class="image-button" data-category="protein" data-filter="flask">
-            <img src="images/rubrik bilder/flaskgron.svg" alt="Fläsk" />
+            <img src="images/mageneratorikoner/flask.svg" alt="Fläsk" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
         <div class="image-button hidden" data-category="protein" data-filter="vegetarisk">
-            <img src="images/knappargenerator/knappar/vegetarisk.png" alt="Vegetarisk" />
+            <img src="images/mageneratorikoner/vegetarisk.svg" alt="Vegetarisk" />
         </div>
         <div class="image-button hidden" data-category="protein" data-filter="vegansk">
-            <img src="images/knappargenerator/knappar/vegansk.png" alt="Vegansk" />
+            <img src="images/mageneratorikoner/vegansk.svg" alt="Vegansk" />
         </div>
         <div class="image-button hidden" data-category="protein" data-filter="skaldjur">
-            <img src="images/knappargenerator/knappar/skaldjur.png" alt="Skaldjur" />
+            <img src="images/mageneratorikoner/skaldjur.svg" alt="Skaldjur" />
         </div>
         <div class="image-button hidden" data-category="protein" data-filter="vilt">
-            <img src="images/knappargenerator/knappar/vilt.png" alt="Vilt" />
+            <img src="images/mageneratorikoner/vilt.svg" alt="Vilt" />
         </div>
         <div class="image-button hidden" data-category="protein" data-filter="lamm">
-            <img src="images/knappargenerator/knappar/lamm.png" alt="Lamm" />
+            <img src="images/mageneratorikoner/lamm.svg" alt="Lamm" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
@@ -156,62 +156,62 @@
     </div>
 
     <div class="category-header">
-        <img src="images/rubrik bilder/matfran7.svg" alt="Mat Från" class="category-image" />
+        <img src="images/rubrik bilder/fran.svg" alt="Mat Från" class="category-image" />
     </div>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
     <div class="filter-container" id="countries">
         <div class="image-button" data-category="country" data-filter="italien">
-            <img src="images/rubrik bilder/italiengra.svg" alt="Italien" />
+            <img src="images/mageneratorikoner/italien.svg" alt="Italien" />
         </div>
         <div class="image-button" data-category="country" data-filter="sverige">
-            <img src="images/rubrik bilder/sverigegra.svg" alt="Sverige" />
+            <img src="images/mageneratorikoner/sverige.svg" alt="Sverige" />
         </div>
         <div class="image-button" data-category="country" data-filter="japan">
-            <img src="images/rubrik bilder/japangra.svg" alt="Japan" />
+            <img src="images/mageneratorikoner/japan.svg" alt="Japan" />
         </div>
         <div class="image-button" data-category="country" data-filter="indien">
-            <img src="images/rubrik bilder/indiengra.svg" alt="Indien" />
+            <img src="images/mageneratorikoner/indien.svg" alt="Indien" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
         <div class="image-button hidden" data-category="country" data-filter="kina">
-            <img src="images/knappargenerator/knappar/kina.png" alt="Kina" />
+            <img src="images/mageneratorikoner/kina.svg" alt="Kina" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="thailand">
-            <img src="images/knappargenerator/knappar/thailand.png" alt="Thailand" />
+            <img src="images/mageneratorikoner/thailand.svg" alt="Thailand" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="korea">
             <img src="images/knappargenerator/knappar/korea.png" alt="Korea" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="mexiko">
-            <img src="images/knappargenerator/knappar/mexiko.png" alt="Mexiko" />
+            <img src="images/mageneratorikoner/mexiko.svg" alt="Mexiko" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="frankrike">
-            <img src="images/knappargenerator/knappar/frankrike.png" alt="Frankrike" />
+            <img src="images/mageneratorikoner/frankrike.svg" alt="Frankrike" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="spanien">
-            <img src="images/knappargenerator/knappar/spanien.png" alt="Spanien" />
+            <img src="images/mageneratorikoner/spanien.svg" alt="Spanien" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="grekland">
-            <img src="images/knappargenerator/knappar/grekland.png" alt="Grekland" />
+            <img src="images/mageneratorikoner/grekland.svg" alt="Grekland" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="usa">
-            <img src="images/knappargenerator/knappar/usa.png" alt="USA" />
+            <img src="images/mageneratorikoner/usa.svg" alt="USA" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="asien">
-            <img src="images/knappargenerator/knappar/asien.png" alt="Asien" />
+            <img src="images/mageneratorikoner/asien.svg" alt="Asien" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="europa">
-            <img src="images/knappargenerator/knappar/europa.png" alt="Europa" />
+            <img src="images/mageneratorikoner/europa.svg" alt="Europa" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="nordamerika">
-            <img src="images/knappargenerator/knappar/nordamerika.png" alt="Nordamerika" />
+            <img src="images/mageneratorikoner/nordamerika.svg" alt="Nordamerika" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="sydamerika">
-            <img src="images/knappargenerator/knappar/sydamerika.png" alt="Sydamerika" />
+            <img src="images/mageneratorikoner/sydamerika.svg" alt="Sydamerika" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="mellanostern">
-            <img src="images/knappargenerator/knappar/mellanostern.png" alt="Mellanöstern" />
+            <img src="images/mageneratorikoner/mellanostern.svg" alt="Mellanöstern" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="afrika">
             <img src="images/knappargenerator/knappar/afrika.png" alt="Afrika" />
