lägger med afrika som glömdes i förra pushe

--- a/generator.html
+++ b/generator.html
@@ -214,7 +214,7 @@
             <img src="images/mageneratorikoner/mellanostern.svg" alt="Mellanöstern" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="afrika">
-            <img src="images/knappargenerator/knappar/afrika.png" alt="Afrika" />
+            <img src="images/mageneratorikoner/afrika.svg" alt="Afrika" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
