--- a/generator.html
+++ b/generator.html
@@ -181,7 +181,7 @@
             <img src="images/mageneratorikoner/thailand.svg" alt="Thailand" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="korea">
-            <img src="images/knappargenerator/knappar/korea.png" alt="Korea" />
+            <img src="images/mageneratorikoner/korea.svg" alt="Korea" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="mexiko">
             <img src="images/mageneratorikoner/mexiko.svg" alt="Mexiko" />
