--- a/generator.html
+++ b/generator.html
@@ -105,7 +105,7 @@
 
     <!-- Divider efter första kategorin och före den andra kategorin -->
     <div class="divider-container">
-        <img src="images/divider/zigzag.svg" alt="Divider" class="divider-image" />
+        <img src="images/divider/dotdivider.svg" alt="Divider" class="divider-image" />
     </div>
 
     <div class="category-header">
@@ -152,7 +152,7 @@
     </div>
 
     <div class="divider-container">
-        <img src="images/divider/zigzag.svg" alt="Divider" class="divider-image" />
+        <img src="images/divider/dotdivider.svg" alt="Divider" class="divider-image" />
     </div>
 
     <div class="category-header">
