nytt försök att få till resultaten på matgeneratorn

--- a/startsida2.html
+++ b/startsida2.html
@@ -69,7 +69,7 @@
 
 
 
-    <img src="images/gordittval.svg" alt="Gör ditt val" class="regular-image">
+    <!-- <img src="images/gordittval.svg" alt="Gör ditt val" class="regular-image"> -->
 
     <div class="image-links">
         <a href="generator.html">
@@ -80,7 +80,7 @@
         </a>
     </div>
 
-    <img src="images/divider/zigzag.svg" alt="Dekorativ divider" class="image-divider">
+    <!-- <img src="images/divider/zigzag.svg" alt="Dekorativ divider" class="image-divider"> -->
 
     <!-- Plats för matdagarnas innehåll -->
     <div id="foodDayContainer">
