la till nya loggor

--- a/startsida2.html
+++ b/startsida2.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <title>Din Startsida Titel</title>
-    <link rel="icon" type="image/png" href="../../images/sidfliklogo.png">
+    <link rel="icon" type="image/png" href="/images/logos/instareceptbaragaffellogo.svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
 
     <header class="site-header">
         <a href="startsida2.html" class="logo-link">
-            <img src="images/logos/cleanlogowithframe.svg" alt="Logga" />
+            <img src="images/logos/instareceptlogga7.svg" alt="Logga" />
         </a>
 
 
