--- a/matkreator.html
+++ b/matkreator.html
@@ -17,7 +17,7 @@
     
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" type="image/png" href="images/sidfliklogo.png">
+    <link rel="icon" type="image/png" href="images/logos/instareceptbaragaffellogo.svg">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
 
     <header class="site-header">
         <a href="startsida2.html" class="logo-link">
-            <img src="images/logos/cleanlogowithframe.svg" alt="Logga" />
+            <img src="images/logos/instareceptlogga7.svg" alt="Logga" />
         </a>
 
         <div id="navbar-container"></div>
