--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="startsida-image-links.css">
     <link rel="stylesheet" href="contact.css">
 
-    <link rel="icon" type="image/png" href="images/sidfliklogo.png">
+    <link rel="icon" type="image/png" href="images/logos/instareceptbaragaffellogo.svg">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
 
     <header class="site-header">
         <a href="startsida2.html" class="logo-link">
-            <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
+            <img src="images//logos/instareceptlogga7.svg" alt="Logga" />
         </a>
 
 
