--- a/omoss.html
+++ b/omoss.html
@@ -7,13 +7,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/sidfliklogo.png" type="image/png">
+    <link rel="icon" href="images/logos/instareceptbaragaffellogo.svg" type="image/png">
     <title>Om Mig</title>
 </head>
 <body>
     <header class="site-header">
         <a href="startsida2.html" class="logo-link">
-            <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
+            <img src="images/logos/instareceptlogga7.svg" alt="Logga" />
         </a>
         <div id="navbar-container"></div>
     </header>
