--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
         <p>Det du sökte på fanns inte, testa igen.</p>
     </div>
     
-    
+    <footer id="footer-container"></footer>
+
+    <script src="footer.js"></script>
 
     <script src="script-ingrediensassistenten.js"></script>
 
